--- a/shared/.gitconfig
+++ b/shared/.gitconfig
@@ -1,13 +1,13 @@
 [user]
 	email = cristobalgajardo.v@gmail.com
-	name = Cristobal Gajardo Vera
+	name = Cristóbal Gajardo Vera
 
 [alias]
-  co = checkout
-  ci = commit
-  st = status
-  br = branch
-  hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
+	co = checkout
+	ci = commit
+	st = status
+	br = branch
+	hist = log --graph --abbrev-commit --decorate --date=format:'%a %d %b %Y %H:%M' --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%ad%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n'' %C(white)%s%C(reset) %C(dim white)- %an%C(reset)' --all
 
 [init]
 	defaultBranch = main
@@ -23,5 +23,5 @@
 [includeIf "gitdir/i:D:/"]
 	path = ~/.gitconfig-windows
 	
-[includeIf "gitdir/i:Users/"]
-	path = ~/.gitconfig-mac
+[includeIf "gitdir/i:/Users/"]
+	path = ~/.gitconfig-macos
