Added flags to skip installation steps in Windows
Also was modified shared .gitconfig due bad legacy implementation
of includeIf route on MacOS devices.

--- a/shared/.gitconfig
+++ b/shared/.gitconfig
@@ -23,5 +23,5 @@ path = ~/.gitconfig-windows
 [includeIf "gitdir/i:D:/"]
 path = ~/.gitconfig-windows
 
-[includeIf "gitdir/i:/Users/"]
+[includeIf "gitdir/i:Users/"]
 path = ~/.gitconfig-macos
