Added Floaterm to SpaceVim

--- a/windows/folders/.SpaceVim.d/init.toml
+++ b/windows/folders/.SpaceVim.d/init.toml
@@ -112,3 +112,8 @@
 [[custom_plugins]]
   repo = 'sindrets/diffview.nvim'
   merged = true
+
+# Vim Floaterm
+[[custom_plugins]]
+  repo = 'voldikss/vim-floaterm'
+  merged = true
