--- a/windows/files/wt-settings.json
+++ b/windows/files/wt-settings.json
@@ -30,6 +30,7 @@
   "defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
   "initialCols": 70,
   "initialRows": 20,
+  "tabWidthMode": "equal",
   "profiles": {
     "defaults": {
       "colorScheme": "Night Owl",
@@ -102,6 +103,29 @@
       "selectionBackground": "#FFFFFF",
       "white": "#DCDFE4",
       "yellow": "#E5C07B"
+    },
+    {
+      "background": "#1F1626",
+      "black": "#099BD7",
+      "blue": "#883CDC",
+      "brightBlack": "#0AB6FF",
+      "brightBlue": "#A74FFF",
+      "brightCyan": "#6C82D9",
+      "brightGreen": "#4FFF4F",
+      "brightPurple": "#00A6FF",
+      "brightRed": "#FF4FA7",
+      "brightWhite": "#FFF8DE",
+      "brightYellow": "#FFD16F",
+      "cursorColor": "#FFFFFF",
+      "cyan": "#4F5D95",
+      "foreground": "#FFFFFF",
+      "green": "#2AB250",
+      "name": "WildCherryMod",
+      "purple": "#0F9DBA",
+      "red": "#D94085",
+      "selectionBackground": "#FFFFFF",
+      "white": "#CCCCB8",
+      "yellow": "#B2924E"
     }
   ]
 }
