Added spanish dictionary to CoC spell checker
Also was defined some files to automatically format on save with CoC Prettier.

--- a/windows/files/coc-settings.json
+++ b/windows/files/coc-settings.json
@@ -1,3 +1,17 @@
 {
-  "coc.preferences.extensionUpdateCheck": "weekly"
+  "coc.preferences.extensionUpdateCheck": "weekly",
+  "cSpellExt.enableDictionaries": ["spanish"],
+  "cSpell.language": "en,es",
+  "coc.preferences.formatOnSaveFiletypes": [
+    "js",
+    "jsx",
+    "ts",
+    "tsx",
+    "html",
+    "css",
+    "scss",
+    "markdown",
+    "json",
+    "yaml"
+  ]
 }
