Added modularization of bootstrapped functions in SpaceVim
All functions used were divided into his own .vim file to improve
readability.

Also was defined CoC key bindings.

--- a/windows/folders/.SpaceVim.d/init.toml
+++ b/windows/folders/.SpaceVim.d/init.toml
@@ -1,8 +1,7 @@
-# All SpaceVim option below [option] section
 [options]
   # Bootstrap options
-  bootstrap_before = 'config#before'
-  bootstrap_after = 'config#after'
+  bootstrap_before = 'init#before'
+  bootstrap_after = 'init#after'
 
   # Base configuration
   colorscheme = 'halcyon'
