--- a/shared/.ideavimrc
+++ b/shared/.ideavimrc
@@ -21,6 +21,7 @@ set number
 set scrolloff=5
 set incsearch
 set hlsearch
+set clipboard+=unnamedplus
 
 """ Idea specific settings ------------------
 set ideajoin
