feat(git): add git-delta to watch git diff

--- a/shared/.gitconfig
+++ b/shared/.gitconfig
@@ -7,6 +7,7 @@
   ci = commit
   st = status
   br = branch
+  d = diff
   hist = log --graph --abbrev-commit --decorate --date=format:'%a %d %b %Y %H:%M' --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%ad%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n'' %C(white)%s%C(reset) %C(dim white)- %an%C(reset)'
  
 [init]
@@ -17,6 +18,27 @@
  
 [push]
 	autoSetupRemote = true
+
+# Git-Delta configuration
+[core]
+  pager = delta
+
+[interactive]
+  diffFilter = delta --color-only
+
+[add.interactive]
+  useBuiltin = false # required for git 2.37.0
+
+[delta]
+  navigate = true # use n and N to move between diff sections
+  light = false # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+  line-numbers = true # show line numbers
+
+[merge]
+  conflictstyle = diff3
+
+[diff]
+  colorMoved = default
 
 # Conditional configuration based on OS
  
