feat(lazygit): add commitizen integration

--- a/shared/config.lazygit.yml
+++ b/shared/config.lazygit.yml
@@ -1,6 +1,15 @@
+---
 gui:
   theme:
     selectedLineBgColor:
       - reverse
     selectedRangeBgColor:
       - reverse
+
+customCommands:
+  - key: "C"
+    command: "git cz c"
+    description: "commit changes with commitizen"
+    context: "files"
+    loadingText: "opening commitizen commit tool"
+    subprocess: true
