--- a/macos/folders/.warp/keybindings.yaml
+++ b/macos/folders/.warp/keybindings.yaml
@@ -1,2 +1,4 @@
 ---
 "input:toggle_natural_language_command_search": ctrl-i
+"terminal:ask_ai_assistant": none
+"workspace:toggle_ai_assistant": none
