feat(lazygit): add keybinding to append new lines when writing a commit

--- a/shared/config.lazygit.yml
+++ b/shared/config.lazygit.yml
@@ -6,6 +6,10 @@ gui:
     selectedRangeBgColor:
       - reverse
 
+keybinding:
+  universal:
+    appendNewline: "<tab>"
+
 customCommands:
   - key: "C"
     command: "git cz c"
