--- a/shared/starship.toml
+++ b/shared/starship.toml
@@ -1,9 +1,9 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 
 [aws]
-format = 'on [$symbol($profile )(\($region\))]($style)'
+format = 'on [$symbol($profile )(\($region\))]($style) '
 symbol = ' '
 
 [gcloud]
-format = 'on [$symbol$active]($style) '
-symbol = '️󱇶 '
+format = 'on [$symbol$project (\($region\))]($style) '
+symbol = '️󱇶  '
