--- a/configs/mise/config.toml
+++ b/configs/mise/config.toml
@@ -3,6 +3,6 @@ neovim = "0.11.4"
 node = "24.3.0"
 python = "3.13.5"
 go = "1.24.5"
-java = "openjdk-21.0.2"
+java = "25.0.0"
 uv = "0.8.13"
 usage = "2.2.2"
